--- a/server/Views/exploreorganisation/Index.cshtml
+++ b/server/Views/exploreorganisation/Index.cshtml
@@ -1082,7 +1082,7 @@ function updateCalendar(hallId, bookings, calendarState, monthYearElement, calen
 
 // Action functions
 function viewDetails(hallId) {
-    window.location.href = `http://192.168.29.69:8080/hall/${hallId}`;
+    window.location.href = `http://localhost:8080/hall/${hallId}`;
 }
 
 function bookNow(hallId) {
