--- a/server/Views/exploreorganisation/Index.cshtml
+++ b/server/Views/exploreorganisation/Index.cshtml
@@ -13,9 +13,12 @@
             <h3 class="mb-0 fw-bold text-dark">Momantza</h3>
         </div>
         <div class="d-flex align-items-center gap-3">
-            <button class="btn btn-outline-primary btn-sm">Sign up</button>
-            <button class="btn btn-primary btn-sm">Log in</button>
-            <button class="btn btn-link text-dark">Menu</button>
+            @* <button class="btn btn-outline-primary btn-sm">Sign up</button> *@
+            <a href="http://localhost:8080/login">
+                <button class="btn btn-primary btn-sm">Log in</button>
+            </a>
+            
+            @* <button class="btn btn-link text-dark">Menu</button> *@
         </div>
     </div>
 </header>
@@ -1082,7 +1085,7 @@ function updateCalendar(hallId, bookings, calendarState, monthYearElement, calen
 
 // Action functions
 function viewDetails(hallId) {
-    window.location.href = `http://192.168.29.69:8080/hall/${hallId}`;
+    window.location.href = `http://localhost:8080/hall/${hallId}`;
 }
 
 function bookNow(hallId) {
@@ -1108,7 +1111,7 @@ function selectDate(hallId, date, statusClass) {
     }
     
     // Redirect to booking page with hall ID and selected date
-    window.location.href = `http://192.168.29.69:8080/booking/${hallId}?date=${date}`;
+    window.location.href = `http://localhost:8080/booking/${hallId}?date=${date}`;
 }
 
 // Filter functionality
