--- a/server/Views/exploreorganisation/Index.cshtml
+++ b/server/Views/exploreorganisation/Index.cshtml
@@ -781,6 +781,9 @@ function createHallCard(hall) {
     const hallBookings = hallData ? hallData.bookings : [];
     const bookingSummary = hallData ? hallData.bookingSummary : null;
     const defaultDomain = hallData ? hallData.defaultDomain : '';
+    const customDomain = hallData ? hallData.customDomain : '';
+
+        console.log('hallData:', hallData);
     
     // Get starting price
     const startingPrice = hall.rateCard?.morningRate || 20000;
@@ -862,13 +865,13 @@ function createHallCard(hall) {
                 ${defaultDomain ? `
                 <button class="btn btn-outline-primary w-100 py-3 fw-semibold" onclick="(function() {
                     const hostname = window.location.hostname;
-                    const port = window.location.port;
+                    // const port = window.location.port;
                     const protocol = window.location.protocol;
                     let orgUrl;
                     
                     if (hostname === 'localhost' || hostname === '127.0.0.1') {
                         // Development: use subdomain.localhost with current port
-                        orgUrl = protocol + '//' + '${defaultDomain}' + '.localhost' + (port ? ':' + port : ':5000');
+                        orgUrl = protocol + '//' + '${defaultDomain}' + '.localhost:' + 8082;
                     } else if (hostname.includes('momentza.com')) {
                         // Production: use subdomain.momentza.com
                         orgUrl = protocol + '//' + '${defaultDomain}' + '.momentza.com';
